tests/fail/feat_no_chrono/ch_nightly/missing_chrono.stderr
error: sscanf is missing 'chrono' feature to use chrono types
 --> $DIR/missing_chrono.rs:3:67
  |
3 |     let parsed = sscanf::scanf!(input, "{:%Y-%m-%dT%H:%M:%S%:z}", DateTime);
  |                                                                   ^^^^^^^^

error: sscanf is missing 'chrono' feature to use chrono types
 --> $DIR/missing_chrono.rs:4:42
  |
4 |     let parsed = sscanf::scanf!(input, "{DateTime:%Y-%m-%dT%H:%M:%S%:z}");
  |                                          ^^^^^^^^
